# loom

./: .gitignore  CLAUDE.md  MCP.md  README.md  SKILL.md  pyproject.toml
.claude/commands/: jar.md  plan.md
docs/: ARCHITECTURE.md
jar/: analytics.py  db.py  filters.py  formatters.py  logging_config.py  mcp_server.py  models.py  repository.py  service.py
jar/cli/: analytics_cmds.py  main.py  project_cmds.py  task_cmds.py
loom/: __init__.py  context.py  db.py  formatters.py  logging_config.py  mcp_server.py  repository.py  service.py
loom/cli/: __main__.py  goal_cmds.py  main.py  project_cmds.py  session_cmds.py  task_cmds.py
tests/: test_analytics.py  test_filters.py  test_models.py  test_repository.py  test_service.py
